# traceway

./: .blastgit-demo-smoke.md  .env.example  .gitignore  AGENTS-IMPROVEMENT-SPEC.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.api  Dockerfile.ingest  Makefile  PRD_APPROVAL_WORKFLOW.md  README.md  docker-compose.yml  openapi.json
.blastgit/: pr-demo-smoke-2026-03-27.md
.claude/skills/backend-endpoint/: SKILL.md
.claude/skills/db-migration/: SKILL.md
.claude/skills/pre-push-checks/: SKILL.md
.claude/skills/rust-crate/: SKILL.md
.claude/skills/type-generation/: SKILL.md
.claude/skills/ui-route/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: blastgit-pr-demo.yml  deploy-ingest.yml  openapi-check.yml
.ona/: automations.yaml
backend/app/: .env.example  README.md  drizzle.config.ts  encore.app  openapi-provider.json  openapi.json  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/app/auth/: api.ts  public_api.ts  service.ts
backend/app/billing/: api.ts  public_api.ts
backend/app/capture_rules/: encore.service.ts  public_api.ts  service.ts  types.ts
backend/app/core/: database.ts  json.ts  public_api.ts  schema.ts
backend/app/core/migrations/: 0000_awesome_deathstrike.sql  (+2 more)
backend/app/datasets/: encore.service.ts  public_api.ts  service.ts  types.ts
backend/app/docs/: api.ts
backend/app/email/: resend.ts
backend/app/evals/: api.ts  encore.service.ts  events.ts  public_api.ts  service.ts  subscriptions.ts  types.ts
backend/app/files/: api.ts
backend/app/mcp/: api.ts
backend/app/provider_connections/: encore.service.ts  public_api.ts
backend/app/public/: control_api.ts
backend/app/queue/: automation.ts  public_api.ts  service.ts  types.ts
backend/app/replay/: api.ts  encore.service.ts  service.ts
backend/app/search/: turbopuffer.ts
backend/app/shared/: http.ts  redact.ts  request.ts
backend/app/system/: api.ts  encore.service.ts
backend/app/tracing/: analytics.ts  api.ts  encore.service.ts  pricing.ts  public_api.ts  service.ts
backend/app/workflows/: eval_runner.ts  storage.ts  system.ts
crates/api/: Cargo.toml
crates/api/src/: any_backend.rs  auth_keys.rs  auth_routes.rs  billing_routes.rs  capture.rs  control_plane.rs  event_log.rs  events.rs  jobs.rs  lib.rs  metrics.rs  org_store.rs  otlp.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  context.rs  email.rs  lib.rs  middleware.rs  session.rs  store.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: cloud.rs  config.rs  ingest.rs  main.rs  pid.rs
crates/daemon/src/api/: auth_keys.rs  auth_routes.rs  billing_routes.rs  capture.rs  control_plane.rs  event_log.rs  events.rs  metrics.rs  mod.rs  org_store.rs  otlp.rs  rate_limit.rs
crates/daemon/src/proxy/: mod.rs
crates/memfs/: Cargo.toml
crates/memfs/src/: layout.rs  lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/src/: lib.rs  migrations.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
crates/storage-turbopuffer/: Cargo.toml
crates/storage-turbopuffer/src/: lib.rs
crates/storage/src/: analytics.rs  backend.rs  error.rs  filter.rs  lib.rs  sqlite.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs  pricing.rs
data/: event_log.db
docs/content/docs/: concepts.mdx  hosting.mdx  index.mdx  meta.json  quickstart.mdx
docs/src/app/: layout.tsx
docs/src/lib/: layout.shared.tsx
examples/: README.md  basic_trace.py  claude_code_example.py  eval_example.py  local_trace.py  local_trave.py  vercel_ai_sdk.ts
examples/python/: basic_trace.py  claude_code_example.py  eval_example.py  local_trace.py
examples/typescript/: mcp_client.ts  quick_trace.ts  vercel_ai_sdk.ts
issues/customer-exp/: cx-001-trace-timeline-waterfall.md  cx-002-trace-reader-mode.md  cx-003-fulltext-search.md  cx-004-span-tag-filtering.md  cx-005-session-user-tracking.md  cx-006-trace-metadata.md  cx-007-mcp-server.md  cx-008-saved-queries.md  cx-009-custom-dashboard-charts.md  cx-010-trace-comparison.md  cx-011-copy-actions.md  cx-012-keyboard-shortcuts.md  cx-013-trace-list-time-filter.md  cx-014-span-annotations.md
issues/infra/: 002-admin-gc-endpoint.md  004-eval-retry-with-backoff.md  005-stale-eval-run-recovery.md  006-sqlite-keyset-pagination.md  008-sqlite-job-queue.md  009-sqlite-event-log.md  010-conditional-caching.md  011-eval-run-job-decomposition.md  012-sse-replay.md  013-model-pricing-types.md  014-pricing-resolution.md  015-proxy-cost-calculation.md  016-pricing-crud-api.md  020-retroactive-cost-backfill.md  021-otlp-ingest.md  inf-001-persistent-store-silent-data-loss.md  inf-002-proxy-utf8-panic.md  inf-003-turbopuffer-topk-truncation.md  inf-004-sqlite-datasets-missing-org-id.md  inf-005-remove-sync-from-backend-on-list.md  inf-006-sqlite-spawn-blocking.md  inf-007-rate-limit-auth-endpoints-DONE.md  inf-008-proxy-streaming-support.md  inf-009-memory-bounded-cache.md  inf-010-sdk-pagination-mismatch.md  inf-011-job-queue-worker.md  inf-012-email-normalization.md  inf-013-delete-invite-org-check.md
scripts/: seed-traces.sh  sync-openapi.sh
sdk/python/: pyproject.toml
sdk/python/llmtrace/: __init__.py  client.py  types.py
sdk/python/tests/: test_complex.py  test_simple.py  test_trace_ui.py
sdk/python/traceway/: __init__.py  client.py  types.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript-mcp/: package.json
sdk/typescript-mcp/src/: index.ts
sdk/typescript/src/: client.ts  index.ts  types.ts
sdk/typescript/tests/: test_complex.ts  test_simple.ts
ui/: .env.example  README.md  package-lock.json  package.json  server.js  vercel.json
ui/src/: app.css  app.html
ui/src/lib/: api-types.ts  api.ts  query-dsl.ts
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
www/: package-lock.json  package.json  server.js  svelte.config.js
www/src/: app.css  app.html
www/src/lib/: ArchDiagram.svelte  InView.svelte
www/src/routes/: +page.svelte
(+117 files in other folders)
