[workspace]
resolver = "2"
members = [
    "crates/daemon",
    "crates/trace",
    "crates/memfs",
    "crates/storage",
    "crates/api",
    "crates/proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
fuser = "0.14"
libc = "0.2"
