[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }
storage = { path = "../storage" }
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
csv.workspace = true
axum-extra.workspace = true
uuid.workspace = true
toml.workspace = true
