[package]
name = "api"
version.workspace = true
edition.workspace = true

[features]
default = []
cloud = ["redis"]

[dependencies]
trace = { path = "../trace" }
storage = { path = "../storage" }
storage-sqlite = { path = "../storage-sqlite" }
auth = { path = "../auth" }
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
csv.workspace = true
axum-extra.workspace = true
uuid.workspace = true
toml.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# Cloud dependencies (optional)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"], optional = true }
futures = "0.3"
