[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Auth-specific
bcrypt = "0.16"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
