[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[features]
default = []
cloud = ["redis", "metrics", "storage-postgres"]
metrics = ["prometheus"]

[dependencies]
trace = { path = "../trace" }
storage = { path = "../storage" }
storage-sqlite = { path = "../storage-sqlite" }
storage-turbopuffer = { path = "../storage-turbopuffer" }
auth = { path = "../auth" }
api = { path = "../api" }
axum.workspace = true
proxy = { path = "../proxy" }
# memfs = { path = "../memfs" }  # requires macFUSE
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
tracing-appender.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
dotenvy = "0.15"

# Cloud dependencies (optional)
storage-postgres = { path = "../storage-postgres", optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
prometheus = { version = "0.13", optional = true }
