[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }
storage = { path = "../storage" }
api = { path = "../api" }
axum.workspace = true
chrono.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
