[package]
name = "storage-sqlite"
version.workspace = true
edition.workspace = true
description = "SQLite storage backend for llm-fs"

[dependencies]
storage = { path = "../storage", features = ["sqlite"] }
trace = { path = "../trace" }
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
