[package]
name = "storage-turbopuffer"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }
storage = { path = "../storage" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "gzip"] }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
