[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
trace = { path = "../trace" }
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
