[package]
name = "storage"
version.workspace = true
edition.workspace = true
description = "Storage abstraction layer for llm-fs"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
trace = { path = "../trace" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite = { workspace = true, optional = true }
