[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtrace"
version = "0.1.0"
description = "Python SDK for llmtrace daemon"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
